# fireql

./: .gitignore  Cargo.toml  LICENSE  README.md  README_en.md  mise.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md  USAGE_en.md
docs/superpowers/plans/: 2026-04-02-reference-relative-path.md  2026-05-23-insert-select-copy.md  2026-07-02-tech-debt-refactoring.md  2026-07-02-tech-debt-round2.md
docs/superpowers/specs/: 2026-04-02-reference-relative-path-design.md  2026-05-23-insert-select-design.md
fixtures/: emulator-e2e.json
src/: error.rs  executor.rs  format.rs  joiner.rs  lib.rs  main.rs  output.rs  planner.rs  sql.rs  value.rs
src/executor/: batch.rs  doc_name.rs  insert_select.rs  mod.rs  select.rs
src/sql/: mod.rs  parser.rs  rewrite.rs  tests.rs
tests/: e2e_seed.rs  emulator.rs
tests/support/: mod.rs
