[package]
name = "fireql"
version = "0.1.1"
edition = "2021"
description = "SQL query interface for Google Cloud Firestore"
license = "MIT"
repository = "https://github.com/hirokazumiyaji/fireql"

[dependencies]
async-trait = "0.1"
firestore = { version = "0.48", default-features = false, features = ["tls-webpki-roots"] }
gcloud-sdk = { version = "0.29", default-features = false, features = ["tls-webpki-roots"] }
sqlparser = "0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
csv = "1.3"
comfy-table = "7"
