[package]
name = "fireql"
version = "0.3.0"
edition = "2021"
description = "SQL query interface for Google Cloud Firestore"
license = "MIT"
repository = "https://github.com/hirokazumiyaji/fireql"

[dependencies]
async-trait = "0.1"
firestore = { version = "0.49", default-features = false, features = ["tls-webpki-roots"] }
gcloud-sdk = { version = "0.30", default-features = false, features = ["tls-webpki-roots"] }
sqlparser = "0.62"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
csv = "1.3"
comfy-table = "7"
rand = "0.10"
